--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "description": "A jQuery plugin for empowering HTML footnotes.",
   "homepage": "http://www.bigfootjs.com",
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.5.0",
     "grunt-contrib-coffee": "^0.10.1",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-sass": "~0.8.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3",
-    "load-grunt-tasks": "~0.2.1"
+    "load-grunt-tasks": "~0.2.1",
+    "node-sass": "^9.0.0"
   },
   "repository": {
     "type": "git",
